--- a/Frontend/yir-frontend/src/index.css
+++ b/Frontend/yir-frontend/src/index.css
@@ -22,3 +22,12 @@ code {
     monospace;
 }
 @import url(./thirdparty/cssreset.css);
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
