--- a/Frontend/yir-frontend/src/App.css
+++ b/Frontend/yir-frontend/src/App.css
@@ -4,10 +4,18 @@
   text-align: center;
   background-color: var(--main-bg-color);
   color: var(--mem-bg-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sign {
+  margin: auto;
+  padding-top: 10vh;
   width: 80vw;
   height: 80vh;
   background-color: var(--mem-bg-light);
+  max-width: 100%;
+  border-radius: 20px;
+  box-shadow: 1px 12px 6px 20px rgb(173 182 196 / 7%);
 }
