--- a/Frontend/yir-frontend/src/App.css
+++ b/Frontend/yir-frontend/src/App.css
@@ -11,11 +11,30 @@
 
 .sign {
   margin: auto;
-  padding-top: 10vh;
   width: 80vw;
   height: 80vh;
   background-color: var(--mem-bg-light);
   max-width: 100%;
   border-radius: 20px;
   box-shadow: 1px 12px 6px 20px rgb(173 182 196 / 7%);
+}
+
+.sign__form {
+  margin-left: 5em;
+  display: flex;
+  flex-direction: column;
+  width: 30em;
+}
+.sign__img {
+  height: fit-content;
+  width: 10em;
+}
+.sign__imgFolder {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 4em;
+}
+.sign__img {
+  transform: rotate(20deg);
 }
