--- a/Frontend/yir-frontend/src/App.css
+++ b/Frontend/yir-frontend/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .sign__form {
-  margin-left: 5em;
+  margin: auto;
   display: flex;
   flex-direction: column;
   width: 30em;
@@ -32,6 +32,7 @@
 .sign__imgFolder {
   display: flex;
   flex-direction: row;
+  align-content: stretch;
   flex-wrap: wrap;
   margin-top: 4em;
 }
