--- a/Frontend/yir-frontend/src/App.css
+++ b/Frontend/yir-frontend/src/App.css
@@ -193,13 +193,32 @@ input {
   left: 0;
 }
 .signin {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  height: 30vh;
+  width: 40vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: black;
+  padding: 1em;
+  margin: 2em;
+}
+.popup :hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .signin__yes {
   color: white;
-  margin-top: 3em;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+.signin__close {
+  height: 2em;
+  width: 2em;
+
+  top: -2em;
+  right: -2em;
+  position: absolute;
 }
