--- a/Frontend/yir-frontend/src/App.css
+++ b/Frontend/yir-frontend/src/App.css
@@ -28,7 +28,9 @@
   width: 80vw;
   color: white;
   background-color: black;
-  opacity: 0.2;
+  opacity: 0.5;
+  box-shadow: 10px 5px 5px black;
+  border-radius: 25px;
 }
 .main_inputform {
   margin-top: 2em;
